--- a/src/Components/VideoFooter.css
+++ b/src/Components/VideoFooter.css
@@ -1,1 +1,51 @@
+.video_footer {
+  position: relative;
+  color: white;
+  bottom: 150px;
+  margin-left: 20px;
+  display: flex;
+}
 
+.video_footer_text {
+  flex: 1;
+}
+
+.video_footer_text > p {
+  padding-bottom: 20px;
+}
+
+.video_footer_record {
+  animation: spinTheRecord infinite 5s linear;
+  height: 50px;
+  filter: invert(1);
+  position: absolute;
+  bottom: 0;
+  right: 20px;
+}
+
+.video_footer_icon {
+  position: absolute;
+}
+
+.video_footer_ticker > .ticker {
+  height: fit-content;
+  margin-left: 30px;
+  width: 50%;
+}
+
+.video_footer_text > h3 {
+  padding-bottom: 20px;
+}
+
+.video_footer_ticker h1 {
+  padding-top: 20px;
+}
+
+@keyframes spinTheRecord {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
